<resources>
    <string name="app_name">Emergency Ride</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="rider_or_driver">Sign in using your mobile number as a Rider or Driver !!</string>
    <string name="a">A</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="button">button</string>
    <string name="title_activity_driver_map">Emergency Ride</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="manually">Manually</string>
    <string name="email">Email</string>
    <string name="enter_your_mail">Enter Your Mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_rider_map">Emergency Ride</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="find">Find</string>
    <string name="user_profile">User Profile</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="_10_5_2018">10-5-2018</string>
    <string name="present_address">Present Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="car_name">Car Name</string>
    <string name="car_model">Car Model</string>
    <string name="car_number">Car Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="vehicleList">
        <item>Car</item>
        <item>Bike</item>
        <item>CNG</item>
    </string-array>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="ride_completed">Ride Completed</string>
    <string name="call">Call</string>
    <string name="destination">Destination</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="find_driver">Find Driver</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="service_type">Service Type</string>
    <string name="bike">Bike</string>
    <string name="er_premium">ER-Premium</string>
    <string name="er_x">ER-X</string>
    <string name="price">price</string>
    <string name="ambulance">Ambulance</string>
    <string name="cng">CNG</string>
</resources>

