<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.Riders.RiderProfileActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/actionToolbar"
        android:theme="@style/ToolBarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/pro"
            android:background="@drawable/image_background"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/riderImage"
            android:contentDescription="@string/user_profile" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/enter_your_name"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:inputType="text"
        android:id="@+id/userNameTextBox"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/phone"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/phone_number"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:textSize="15sp"
        android:id="@+id/userPhoneNumber"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/gender"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:id="@+id/gender"
                android:spinnerMode="dropdown"
                style="@style/SpinnerTheme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/date_of_birth"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:hint="@string/_10_5_2018"
                android:background="@color/colorWhite"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:id="@+id/birth"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:id="@+id/saveBtn"/>
</LinearLayout>