<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activites.EmailLogInActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_background"
        android:alpha=".9"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:padding="15dp"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="40sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    android:text="@string/enter_your_mail"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:fontFamily="@font/aladin"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/email"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:fontFamily="@font/anton"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:id="@+id/emailTextBox"
                    android:textColor="@color/colorBlack"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_password"
                    android:textSize="20sp"
                    android:padding="20dp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/aladin"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/password"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:fontFamily="@font/anton"
                    android:inputType="textPassword"
                    android:id="@+id/passwordTextBox"
                    android:textColor="@color/colorBlack"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:fontFamily="@font/anton"
                    android:layout_margin="20dp"
                    android:id="@+id/btnSignIn"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight=".3"
                        android:background="@color/colorAccent"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="OR"
                        android:layout_weight=".4"
                        android:textColor="@color/colorBlack"
                        android:gravity="center"
                        android:layout_marginTop="2dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight=".3"
                        android:background="@color/colorBlack"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:fontFamily="@font/almendra_sc"
                        android:gravity="end"
                        android:paddingEnd="5dp"
                        android:paddingStart="0dp"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorDimBlack" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:fontFamily="@font/anton"
                        android:paddingEnd="0dp"
                        android:paddingStart="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/btnSignUp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/berkshire_swash"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorBlack"
                    android:textStyle="italic"
                    android:id="@+id/passwordResetBtn"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>

